# LuaGlue

./: .gitignore  CMakeLists.txt  LuaGlue.kdev4  readme.md  todo.md
cmake/: FindLLVM.cmake
examples/: CMakeLists.txt  LuaPluginBase.h  allegdemo.cpp  array.cpp  array.lua  constobj.cpp  foo.cpp  foo.lua  invoke.cpp  invoke.lua  light_sandbox.cpp  light_sandbox.lua  luavalue.cpp  luavalue.lua  mfile1.cpp  mfile2.cpp  mfilemain.cpp  plugin.cpp  plugin_test.cpp  plugin_test.lua  prof.cpp  prof.lua  props.cpp  props.lua  shared_ptr.cpp  shared_ptr.lua  stdfunc.cpp  stdfunc.lua
include/LuaGlue/: LuaGlue.h  LuaGlueApplyTuple.h  LuaGlueArray.h  LuaGlueBase.h  LuaGlueClass.h  LuaGlueClassBase.h  LuaGlueCompat.h  LuaGlueConstant.h  LuaGlueCtorMethod.h  LuaGlueDebug.h  LuaGlueDtorMethod.h  LuaGlueFunction.h  LuaGlueIndexMethod.h  LuaGlueLuaFuncRef.h  LuaGlueLuaFunction.h  LuaGlueLuaTable.h  LuaGlueLuaUserData.h  LuaGlueLuaValue.h  LuaGlueMethod.h  LuaGlueMethodBase.h  LuaGlueNewIndexMethod.h  LuaGlueObject.h  LuaGlueProperty.h  LuaGluePropertyBase.h  LuaGlueStackTemplates.h  LuaGlueStaticMethod.h  LuaGlueStdFuncWrapper.h  LuaGlueSymTab.h  LuaGlueType.h  LuaGlueTypeBase.h  LuaGlueTypeValue.h  LuaGlueTypeValueBase.h  LuaGlueUtils.h  LuaHelpers.h
include/LuaGlue/ApplyTuple/: ConstObjFunc.h  GlueObjConstFunc.h  GlueObjFunc.h  GlueObjSPtrConstFunc.h  GlueObjSPtrFunc.h  LuaFunc.h  ObjCtor.h  ObjFunc.h  StaticFunc.h  StdFunc.h
include/LuaGlue/StackTemplates/: Array.h  Boolean.h  GlueObj.h  Integer.h  LuaValue.h  Numeric.h  Ptr.h  SharedPtr.h  StaticObj.h  StdFunction.h  String.h  TypeValue.h
tools/Hoof/: CMakeLists.txt  hoof.pl  test.h  test_ml.h
tools/Hoof/include/: ASTConsumer.h  ASTVisitor.h  Hoof.h  HoofDebug.h
tools/Hoof/src/: ASTConsumer.cpp  ASTVisitor.cpp  Hoof.cpp  HoofDebug.cpp  main.cpp
tools/coverity/: model.cpp
